// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"   123   " 1`] = `
plain (1:4 ~ 1:7)
1 | ···123···¶
  |    ^^^
<plain value="123" />
`;

exports[`" !!str # comment 1 \\n &anchor # comment 2 \\n  123   " 1`] = `
plain (1:2 ~ 3:6)
1 | ·!!str·#·comment·1·¶
  |  ^^^^^^^^^^^^^^^^^^^
2 | ·&anchor·#·comment·2·¶
  | ^^^^^^^^^^^^^^^^^^^^^^
3 | ··123···¶
  | ^^^^^
<plain anchor="anchor" tag={"handle":"!!","suffix":"str"} value="123">
  <middleComment value=" comment 1 ">
  <middleComment value=" comment 2 ">
</plain>
`;

exports[`" !!str # comment 1 \\n &anchor # comment 2 \\n  123   " 2`] = `
comment (1:8 ~ 1:20)
1 | ·!!str·#·comment·1·¶
  |        ^^^^^^^^^^^^
2 | ·&anchor·#·comment·2·¶
3 | ··123···¶
<comment value=" comment 1 " />
`;

exports[`" !!str # comment 1 \\n &anchor # comment 2 \\n  123   " 3`] = `
comment (2:10 ~ 2:22)
1 | ·!!str·#·comment·1·¶
2 | ·&anchor·#·comment·2·¶
  |          ^^^^^^^^^^^^
3 | ··123···¶
<comment value=" comment 2 " />
`;
